--- a/index.html
+++ b/index.html
@@ -15,23 +15,42 @@
           <div class="form">
             <div class="montant">
               <label for="">Montant emprunté</label>
-              <input type="number" id="montant" placeholder="100000" />
+              <input type="number" id="montant" placeholder="100000" required />
               <span class="euro-symbol">€</span>
             </div>
+
             <div class="taux">
               <label for="">Taux nominal</label>
-              <input type="number" id="taux" placeholder="1.2" />
+              <input type="number" id="taux" placeholder="1.2" required />
               <span class="euro-symbol">%</span>
             </div>
+
             <div class="durée">
               <label for="">Durée de remboursement</label>
-              <input type="number" id="durée" placeholder="15" />
+              <input type="number" id="durée" placeholder="15" required />
               <span class="euro-symbol">an(s)</span>
             </div>
-            <button type="submit">Calculer</button>
+
+            <button type="submit" id="calculer">Calculer</button>
           </div>
         </form>
       </div>
+    </div>
+    <div class="resultat" id="resultat" style="display: none">
+      <h2 style="text-align: center">Tableau d'amortissement</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Mois</th>
+            <th>Solde Initial</th>
+            <th>Échéance</th>
+            <th>Intérêt</th>
+            <th>Amortissement</th>
+            <th>Solde Restant</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
     </div>
 
     <script src="JavaScript/Script.js"></script>
