--- a/index.html
+++ b/index.html
@@ -14,35 +14,56 @@
     <div class="container">
       <div class="calculatrice">
         <h1>Calculatrice prêt immobilier</h1>
-        <form action="" class="formulaire" id="calculatorForm">
+        <form action="" class="formulaire" onsubmit="return validateForm()">
           <div class="form">
             <div class="montant">
               <label for="">Montant emprunté</label>
-              <input type="number" id="montant" placeholder="100000" required />
+              <input
+                type="text"
+                id="montant"
+                placeholder="100000"
+                pattern="[0-9]*"
+                inputmode="numeric"
+                required
+              />
               <span class="euro-symbol">€</span>
             </div>
 
             <div class="taux">
               <label for="">Taux nominal</label>
-              <input type="number" id="taux" placeholder="1.2" required />
+              <input
+                type="text"
+                id="taux"
+                placeholder="1.2"
+                pattern="[0-9]*"
+                inputmode="numeric"
+                required
+              />
               <span class="euro-symbol">%</span>
             </div>
 
             <div class="durée">
               <label for="">Durée de remboursement</label>
-              <input type="number" id="durée" placeholder="15" required />
+              <input
+                type="text"
+                id="durée"
+                placeholder="15"
+                pattern="[0-9]*"
+                inputmode="numeric"
+                required
+              />
               <span class="euro-symbol">an(s)</span>
+            </div>
+
+            <div class="text">
+              <p style="display: none" id="erreur" class="error-message">
+                Veuillez remplir tous les champs
+              </p>
             </div>
 
             <button type="submit" id="calculer">Calculer</button>
           </div>
         </form>
-        <p
-          id="errorMessage"
-          style="color: var(-color-orange-microlead); display: none"
-        >
-          Veuillez remplir tous les champs obligatoires.
-        </p>
       </div>
     </div>
     <div class="resultat" id="resultat" style="display: none">
