--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="text">
               <p style="display: none" id="erreur" class="error-message">
-                Veuillez remplir tous les champs
+                Veuillez remplir le/les champs vide(s)!!!
               </p>
             </div>
 
