--- a/index.html
+++ b/index.html
@@ -19,39 +19,44 @@
           <div class="form">
             <div class="montant">
               <label for="">Montant emprunté</label>
-              <input
-                type="text"
-                id="montant"
-                placeholder="100000"
-                inputmode="numeric"
-                required
-              />
-              <span class="euro-symbol">€</span>
+              <div class="input-container">
+                <input
+                  type="text"
+                  id="montant"
+                  placeholder="100000"
+                  inputmode="numeric"
+                  required
+                /><span class="euro-symbol">€</span>
+              </div>
             </div>
 
             <div class="taux">
               <label for="">Taux nominal</label>
-              <input
-                type="text"
-                id="taux"
-                placeholder="1.2"
-                pattern="^[0-9]+(\.[0-9]+)?$"
-                inputmode="decimal"
-                required
-              />
-              <span class="euro-symbol">%</span>
+              <div class="input-container">
+                <input
+                  type="text"
+                  id="taux"
+                  placeholder="1.2"
+                  pattern="^[0-9]+(\.[0-9]+)?$"
+                  inputmode="decimal"
+                  required
+                />
+                <span class="euro-symbol">%</span>
+              </div>
             </div>
 
             <div class="durée">
               <label for="">Durée de remboursement</label>
-              <input
-                type="text"
-                id="durée"
-                placeholder="15"
-                inputmode="numeric"
-                required
-              />
-              <span class="euro-symbol">an(s)</span>
+              <div class="input-container">
+                <input
+                  type="text"
+                  id="durée"
+                  placeholder="15"
+                  inputmode="numeric"
+                  required
+                />
+                <span class="euro-symbol">an(s)</span>
+              </div>
             </div>
 
             <div class="text">
@@ -65,6 +70,7 @@
         </form>
       </div>
     </div>
+
     <div class="resultat" id="resultat" style="display: none">
       <div id="table-container">
         <h2 style="text-align: center">Tableau d'amortissement</h2>
