--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="resultat" id="resultat" style="display: none">
       <div id="table-container">
-        <h2 style="text-align: center">Tableau d'amortissement</h2>
+        <h2 class="titre" style="text-align: center;">Tableau d'amortissement</h2>
         <table>
           <thead>
             <tr>
