--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/Style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/Responsive2.css">
+    <link rel="stylesheet" href="css/responsive3.css">
     <title>Calculatrice</title>
   </head>
 
@@ -71,9 +73,11 @@
       </div>
     </div>
 
-    <div class="resultat" id="resultat" style="display: none">
+    <div class="resultat container" id="resultat" style="display: none">
+      <h2 class="titre" style="text-align: center"> 
+        Tableau d'amortissement
+      </h2>
       <div id="table-container">
-        <h2 class="titre" style="text-align: center;">Tableau d'amortissement</h2>
         <table>
           <thead>
             <tr>
